--- a/imports/bibliography.bib
+++ b/imports/bibliography.bib
@@ -1,217 +1,160 @@
-
-@article{ghosh_artificial_2021,
-	title = {Artificial intelligence and internet of things in screening and management of autism spectrum disorder},
-	volume = {74},
-	issn = {2210-6707},
-	url = {https://www.sciencedirect.com/science/article/pii/S2210670721004674},
-	doi = {10.1016/j.scs.2021.103189},
-	abstract = {Autism is a disability that obstructs the process of a person’s development. Autistic individuals find it extremely difficult to cope with the world’s pace, can not communicate properly, and unable to express their feelings appropriately. Artificial Intelligence ({AI}), Machine Learning ({ML}), and Internet of Things ({IoT}) are used in several medical applications, and autistic individuals can be assisted using the proper use of automated systems. In this paper, some of the research works in the field of application of {AI}, {ML}, and {IoT} in autism were reviewed. State-of-the-art articles were collected and around 58 articles were selected which have significant contribution in this field. The selected research works were analyzed, represented, and compared. Finally, incorporation of the autism facilities in smart city environment is described, some research gaps and challenges were pointed out, and recommendations were provided for further research work.},
-	pages = {103189},
-	journaltitle = {Sustainable Cities and Society},
-	shortjournal = {Sustainable Cities and Society},
-	author = {Ghosh, Tapotosh and Banna, Md. Hasan Al and Rahman, Md. Sazzadur and Kaiser, M. Shamim and Mahmud, Mufti and Hosen, A. S. M. Sanwar and Cho, Gi Hwan},
-	urldate = {2024-01-18},
-	date = {2021-11-01},
-	keywords = {Artificial intelligence, Autism, Internet of things, Machine learning, Monitoring, Smart city},
-	file = {Ghosh et al. - 2021 - Artificial intelligence and internet of things in .pdf:/home/docjyj/Zotero/storage/TMKZUYDK/Ghosh et al. - 2021 - Artificial intelligence and internet of things in .pdf:application/pdf;ScienceDirect Snapshot:/home/docjyj/Zotero/storage/B77GG5FM/S2210670721004674.html:text/html},
+@techreport{2015DetourRightPlace,
+  title = {Detour to the {{Right Place}}: {{A Study}} with {{Recommendations}} for {{Addressing}} the {{Transportation Needs}} and {{Barriers}} of {{Adults}} on the {{Autism Spectrum}} in {{New Jersey}}},
+  author = {Deka, Devajyoti and Lubin, Andrea and McGackin, Melanie and Feeley, Cecilia},
+  year = {2015},
+  month = sep,
+  address = {{New Jersey}},
+  institution = {{Rutgers}},
+  url = {https://vtc.rutgers.edu/publication/detour-to-the-right-place/}
 }
 
-@article{falkmer_viewpoints_2015,
-	title = {Viewpoints of adults with and without Autism Spectrum Disorders on public transport},
-	volume = {80},
-	issn = {0965-8564},
-	url = {https://www.sciencedirect.com/science/article/pii/S0965856415002116},
-	doi = {10.1016/j.tra.2015.07.019},
-	abstract = {Background
-Public transport is low cost, allows for independence, and facilitates engagement and participation for non-drivers. However, the viewpoints of individuals with cognitive disabilities are rarely considered. In Australia, the prevalence of Autism Spectrum Disorders ({ASD}) is approximately 1\% and increasing. Many individuals with {ASD} do not possess a driver’s licence, indicating that access to public transport is crucial for their independence. However, at present, there is no research on the opinions of adults with {ASD} on public transport.
-Aim
-To identify the viewpoints of adults with {ASD} regarding the barriers and facilitators of public transport usage and their transportation preferences, and to contrast these against the viewpoints of neurotypical adults.
-Methods
-Q method was used to identify the viewpoints of both participant groups on public transport. Participants consisted of 55 adults with a diagnosis of {ASD} and a contrast group of 57 neurotypical adults. Both groups completed a Q sort task which took place in either Perth or Melbourne, Australia.
-Results
-The most prominent viewpoint indicated that both groups preferred to use public transport over driving and believed that it supported their independence. This viewpoint also indicated that both groups preferred to use electronic ticketing when using public transport. Interestingly, the second most prominent viewpoint indicated that both groups preferred to drive themselves by private car rather than use public transport.
-Discussion
-It appears that the viewpoints of adults with and without {ASD} regarding public transportation were largely similar. However, questions arose about whether the preference for public transport in the {ASD} group may be more a result of difficulties obtaining a driving licence than a deliberate choice. The only barrier specified by adults with {ASD} related to crowding on public transport. Safety and convenience in relation to location and timing of services were barriers reported by neurotypical adults.},
-	pages = {163--183},
-	journaltitle = {Transportation Research Part A: Policy and Practice},
-	shortjournal = {Transportation Research Part A: Policy and Practice},
-	author = {Falkmer, Marita and Barnett, Tania and Horlin, Chiara and Falkmer, Olov and Siljehav, Jessica and Fristedt, Sofi and Lee, Hoe C. and Chee, Derserri Y. and Wretstrand, Anders and Falkmer, Torbjörn},
-	urldate = {2024-01-18},
-	date = {2015-10-01},
-	keywords = {Asperger’s syndrome, Bus, Community mobility, Q methodology, Train, Tram},
-	file = {Falkmer et al. - 2015 - Viewpoints of adults with and without Autism Spect.pdf:/home/docjyj/Zotero/storage/SWGXQ8Z6/Falkmer et al. - 2015 - Viewpoints of adults with and without Autism Spect.pdf:application/pdf;ScienceDirect Snapshot:/home/docjyj/Zotero/storage/8H7CQ2QE/S0965856415002116.html:text/html;Version soumise:/home/docjyj/Zotero/storage/A5RNFMAP/Falkmer et al. - 2015 - Viewpoints of adults with and without Autism Spect.pdf:application/pdf},
+@article{2015ViewpointsAdultsAutism,
+  title = {Viewpoints of adults with and without {{Autism Spectrum Disorders}} on public transport},
+  author = {Falkmer, Marita and Barnett, Tania and Horlin, Chiara and Falkmer, Olov and Siljehav, Jessica and Fristedt, Sofi and Lee, Hoe C. and Chee, Derserri Y. and Wretstrand, Anders and Falkmer, Torbj{\"o}rn},
+  year = {2015},
+  month = oct,
+  journal = {Transportation Research Part A: Policy and Practice},
+  volume = {80},
+  pages = {163--183},
+  url = {https://doi.org/10.1016/j.tra.2015.07.019},
+  urldate = {2024-01-18}
 }
 
-@inproceedings{mekbib_designing_2021,
-	title = {Designing a Smart Virtual Environment for Autism Spectrum Disorder Detection},
-	url = {https://ieeexplore.ieee.org/document/9604456},
-	doi = {10.1109/SWC50871.2021.00047},
-	abstract = {Emotional intelligence is not only a social skill for human beings, but also a challenging research topic in human-computer interaction related to the ability to recognize particular emotional patterns of humans by machines. Studies have shown that virtual reality ({VR}) can trigger stronger and more specific emotional reactivity in users than other visual/audio media. Children with autism spectrum disorder ({ASD}) usually suffer from social impairments, such as challenges in emotion perception and emotion expression. A smart {VR} {eHealth} system that carefully triggers specific emotional reactions and detects the patterns in children with {ASD} can help with early screening, intervention, and emotional regulation. This paper proposes a {VR} gaming system that makes use of psychophysiological sensor signals, in-game performance and responses, stressor mini-games to detect different emotional reactivity patterns, and dynamically changes the game scene according to the current emotional status. This is a framework of a long-term study, where the ultimate goal is to develop a {VR} system with real-time feedback to assist early screening and diagnosis of {ASD}.},
-	eventtitle = {2021 {IEEE} {SmartWorld}, Ubiquitous Intelligence \& Computing, Advanced \& Trusted Computing, Scalable Computing \& Communications, Internet of People and Smart City Innovation ({SmartWorld}/{SCALCOM}/{UIC}/{ATC}/{IOP}/{SCI})},
-	pages = {288--294},
-	booktitle = {2021 {IEEE} {SmartWorld}, Ubiquitous Intelligence \& Computing, Advanced \& Trusted Computing, Scalable Computing \& Communications, Internet of People and Smart City Innovation ({SmartWorld}/{SCALCOM}/{UIC}/{ATC}/{IOP}/{SCI})},
-	author = {Mekbib, Estephanos and Huang, Yan and Mei, Chao and Li, Yi Joy},
-	urldate = {2024-01-18},
-	date = {2021-10},
-	file = {Mekbib et al. - 2021 - Designing a Smart Virtual Environment for Autism S.pdf:/home/docjyj/Zotero/storage/BTHQAWB3/Mekbib et al. - 2021 - Designing a Smart Virtual Environment for Autism S.pdf:application/pdf},
+@inproceedings{2017BuildingSmartAccessible,
+  title = {Building {{Smart}} and {{Accessible Transportation Hubs}} with {{Internet}} of {{Things}}, {{Big Data Analytics}}, and {{Affective Computing}}},
+  booktitle = {International {{Conference}} on {{Sustainable Infrastructure}} 2017},
+  author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
+  year = {2017},
+  month = oct,
+  pages = {126--138},
+  publisher = {{American Society of Civil Engineers}},
+  address = {{New York}},
+  url = {doi.org/10.1061/9780784481219.012},
+  urldate = {2024-02-24}
 }
 
-@article{benssassi_wearable_2018,
-	title = {Wearable Assistive Technologies for Autism: Opportunities and Challenges},
-	volume = {17},
-	issn = {1558-2590},
-	url = {https://ieeexplore.ieee.org/document/8383671},
-	doi = {10.1109/MPRV.2018.022511239},
-	shorttitle = {Wearable Assistive Technologies for Autism},
-	abstract = {Autism is a lifelong developmental condition that affects how people perceive the world and interact with others. Challenges with typical social engagement, common in the autism experience, can have a significant negative impact on the quality of life of individuals and families living with autism. Recent advances in sensing, intelligent, and interactive technologies can enable new forms of assistive and augmentative technologies to support social interactions. However, researchers have not yet demonstrated effectiveness of these technologies in long-term real-world use. This article presents an overview of the social and sensory challenges of autism, which offer great opportunities and challenges for the design and development of assistive technologies. We review existing work on developing wearable technologies for autism particularly to assist social interactions, analyze their potential and limitations, and discuss future research directions.},
-	pages = {11--21},
-	number = {2},
-	journaltitle = {{IEEE} Pervasive Computing},
-	author = {Benssassi, Esma Mansouri and Gomez, Juan-Carlos and Boyd, {LouAnne} E. and Hayes, Gillian R. and Ye, Juan},
-	urldate = {2024-01-18},
-	date = {2018-04},
-	note = {Conference Name: {IEEE} Pervasive Computing},
-	file = {Benssassi et al. - 2018 - Wearable Assistive Technologies for Autism Opport.pdf:/home/docjyj/Zotero/storage/B9P3Q6MV/Benssassi et al. - 2018 - Wearable Assistive Technologies for Autism Opport.pdf:application/pdf;Version acceptée:/home/docjyj/Zotero/storage/6L6CFCKC/Benssassi et al. - 2018 - Wearable Assistive Technologies for Autism Opport.pdf:application/pdf},
+@inproceedings{2017BuildingSmartTransportation,
+  title = {Building {{Smart Transportation Hubs}} with {{Internet}} of {{Things}} to {{Improve Services}} to {{People}} with {{Disabilities}}},
+  booktitle = {Computing in {{Civil Engineering}} 2017},
+  author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
+  year = {2017},
+  month = jun,
+  pages = {458--466},
+  publisher = {{American Society of Civil Engineers}},
+  address = {{Seattle}},
+  url = {doi.org/10.1061/9780784480823.055},
+  urldate = {2024-01-18}
 }
 
-@article{kersten_developing_2021,
-	title = {Developing community mobility and driving with youth on the autism spectrum: A psychosocial perspective},
-	volume = {28},
-	issn = {1103-8128},
-	url = {https://doi.org/10.1080/11038128.2020.1798506},
-	doi = {10.1080/11038128.2020.1798506},
-	shorttitle = {Developing community mobility and driving with youth on the autism spectrum},
-	pages = {91--96},
-	number = {2},
-	journaltitle = {Scandinavian Journal of Occupational Therapy},
-	author = {Kersten, Michelle L. and Coxon, Kristy and Lee, Hoe and Wilson, Nathan J.},
-	urldate = {2024-01-18},
-	date = {2021-02-17},
-	pmid = {32755424},
-	note = {Publisher: Taylor \& Francis
-\_eprint: https://doi.org/10.1080/11038128.2020.1798506},
-	keywords = {Adolescent, autism, community participation, emerging adult, gender, parents, school transition, transportation},
-	file = {Kersten et al. - 2021 - Developing community mobility and driving with you.pdf:/home/docjyj/Zotero/storage/JXHVHNSG/Kersten et al. - 2021 - Developing community mobility and driving with you.pdf:application/pdf},
+@article{2017UTravelSmartMobility,
+  title = {{{UTravel}}: {{Smart Mobility}} with a {{Novel User Profiling}} and {{Recommendation Approach}}},
+  author = {Amoretti, Michele and Belli, Laura and Zanichelli, Francesco},
+  year = {2017},
+  month = jul,
+  journal = {Pervasive and Mobile Computing},
+  volume = {38},
+  number = {2},
+  pages = {474--489},
+  url = {doi.org/10.1016/j.pmcj.2016.08.008},
+  urldate = {2024-01-18}
 }
 
-@article{silva_accessibility_2023,
-	title = {Accessibility strategies to promote inclusive mobility through multi-objective approach},
-	volume = {5},
-	issn = {2523-3971},
-	url = {https://doi.org/10.1007/s42452-023-05349-0},
-	doi = {10.1007/s42452-023-05349-0},
-	abstract = {In recent decades, urban mobility has assumed a need for adaptation due to the more significant congestion experienced in cities and the growing focus on sustainability. Several solutions are proposed to help citizens move around in an urban environment. Most are not yet aware of the universal and accessible aspect that these solutions must have. This paper proposes a route support system embedded in a mobile application, Viana+Acessível, using a multi-objective approach. The application aims to promote accessible mobility within the city, contributing to physical and psychological well-being for citizens with reduced mobility, temporary or permanently, such as people with spectrum autism disorder, the visually impaired, wheelchair users, pregnant, and the elderly. For the evaluation of the algorithms, four objective measures were considered: accessibility, slope, time, and length of the paths. The tests carried out with different routing algorithms showed that the A-Star presented the fastest results in terms of execution time compared to the Dijkstra, Floyd–Warshall, and Bellman–Ford. When analysing in a multi-objective approach, time, slope and accessibility were demonstrated to be conflicting objectives. Bi-objective and tri-objective were applied and Pareto front was explored.},
-	pages = {150},
-	number = {5},
-	journaltitle = {{SN} Applied Sciences},
-	shortjournal = {{SN} Appl. Sci.},
-	author = {Silva, Tânia and Verde, David and Paiva, Sara and Barreto, Luís and Pereira, Ana I.},
-	urldate = {2024-01-18},
-	date = {2023-04-28},
-	langid = {english},
-	keywords = {46N10, 68M07, 68N30, 90C29, C61, Decision support system, Inclusive mobility, Multi-objective optimisation, Routing algorithm},
-	file = {Full Text PDF:/home/docjyj/Zotero/storage/DP94PK9P/Silva et al. - 2023 - Accessibility strategies to promote inclusive mobi.pdf:application/pdf},
+@article{2018MobilityPoliciesExtraSmall,
+  title = {Mobility {{Policies}} and {{Extra-Small Projects}} for {{Improving Mobility}} of {{People}} with {{Autism Spectrum Disorder}}},
+  author = {Cecchini, Arnaldo and Congiu, Tanja and Talu, Valentina and Tola, Giulia},
+  year = {2018},
+  month = sep,
+  journal = {Sustainability},
+  volume = {10},
+  number = {9},
+  pages = {3256},
+  url = {https://doi.org/10.3390/su10093256},
+  urldate = {2024-01-18}
 }
 
-@article{paiva_enabling_2021,
-	title = {Enabling Technologies for Urban Smart Mobility: Recent Trends, Opportunities and Challenges},
-	volume = {21},
-	rights = {http://creativecommons.org/licenses/by/3.0/},
-	issn = {1424-8220},
-	url = {https://www.mdpi.com/1424-8220/21/6/2143},
-	doi = {10.3390/s21062143},
-	shorttitle = {Enabling Technologies for Urban Smart Mobility},
-	abstract = {The increasing population across the globe makes it essential to link smart and sustainable city planning with the logistics of transporting people and goods, which will significantly contribute to how societies will face mobility in the coming years. The concept of smart mobility emerged with the popularity of smart cities and is aligned with the sustainable development goals defined by the United Nations. A reduction in traffic congestion and new route optimizations with reduced ecological footprint are some of the essential factors of smart mobility; however, other aspects must also be taken into account, such as the promotion of active mobility and inclusive mobility, encouraging the use of other types of environmentally friendly fuels and engagement with citizens. The Internet of Things ({IoT}), Artificial Intelligence ({AI}), Blockchain and Big Data technology will serve as the main entry points and fundamental pillars to promote the rise of new innovative solutions that will change the current paradigm for cities and their citizens. Mobility-as-a-service, traffic flow optimization, the optimization of logistics and autonomous vehicles are some of the services and applications that will encompass several changes in the coming years with the transition of existing cities into smart cities. This paper provides an extensive review of the current trends and solutions presented in the scope of smart mobility and enabling technologies that support it. An overview of how smart mobility fits into smart cities is provided by characterizing its main attributes and the key benefits of using smart mobility in a smart city ecosystem. Further, this paper highlights other various opportunities and challenges related to smart mobility. Lastly, the major services and applications that are expected to arise in the coming years within smart mobility are explored with the prospective future trends and scope.},
-	pages = {2143},
-	number = {6},
-	journaltitle = {Sensors},
-	author = {Paiva, Sara and Ahad, Mohd Abdul and Tripathi, Gautami and Feroz, Noushaba and Casalino, Gabriella},
-	urldate = {2024-01-18},
-	date = {2021-01},
-	langid = {english},
-	note = {Number: 6
-Publisher: Multidisciplinary Digital Publishing Institute},
-	keywords = {smart cities, smart mobility, smart services, sustainability},
-	file = {Full Text PDF:/home/docjyj/Zotero/storage/AMAR5EDY/Paiva et al. - 2021 - Enabling Technologies for Urban Smart Mobility Re.pdf:application/pdf},
+@article{2018WearableAssistiveTechnologies,
+  title = {Wearable {{Assistive Technologies}} for {{Autism}}: {{Opportunities}} and {{Challenges}}},
+  author = {Benssassi, Esma Mansouri and Gomez, Juan-Carlos and Boyd, LouAnne E. and Hayes, Gillian R. and Ye, Juan},
+  year = {2018},
+  month = jun,
+  journal = {IEEE Pervasive Computing},
+  volume = {17},
+  number = {2},
+  pages = {11--21},
+  url = {doi.org/10.1109/MPRV.2018.022511239},
+  urldate = {2024-01-18}
 }
 
-@article{cecchini_mobility_2018,
-	title = {Mobility Policies and Extra-Small Projects for Improving Mobility of People with Autism Spectrum Disorder},
-	volume = {10},
-	rights = {http://creativecommons.org/licenses/by/3.0/},
-	issn = {2071-1050},
-	url = {https://www.mdpi.com/2071-1050/10/9/3256},
-	doi = {10.3390/su10093256},
-	abstract = {The paper focuses on the relationship between cities and people with Autism Spectrum Disorder ({ASD}). Specifically, this research aims to provide practical guidelines on how to design urban policies and urban design projects, such that they improve the capabilities of people with {ASD} to walk across the city and access relevant public urban spaces and facilities. Although this is a well-defined field of research, this paper should be seen as a contribution to the debate on the understanding of disability as a product of processes of human-environment interaction and as an attempt to address issues of mobility for people with disabilities by taking into account their personal characteristics and capabilities. Current methodological and operational efforts on the role of spatial configuration as a means for improving the autonomy of people with {ASD} focus almost exclusively on the design of closed, separated, private spaces, devoted only to people with {ASD} (mainly children). Starting from these considerations, the paper describes a research project aimed at defining an integrated set of urban mobility policies and extra-small urban design projects to provide people with {ASD} a real opportunity of using their city.},
-	pages = {3256},
-	number = {9},
-	journaltitle = {Sustainability},
-	author = {Cecchini, Arnaldo and Congiu, Tanja and Talu, Valentina and Tola, Giulia},
-	urldate = {2024-01-18},
-	date = {2018-09},
-	langid = {english},
-	note = {Number: 9
-Publisher: Multidisciplinary Digital Publishing Institute},
-	keywords = {disadvantaged people, people with {ASD}, quality of urban life, urban capabilities, urban mobility policies},
-	file = {Full Text PDF:/home/docjyj/Zotero/storage/VANML665/Cecchini et al. - 2018 - Mobility Policies and Extra-Small Projects for Imp.pdf:application/pdf},
+@article{2020DevelopingCommunityMobility,
+  title = {Developing community mobility and driving with youth on the autism spectrum: {{A}} psychosocial perspective},
+  author = {Kersten, Michelle L. and Coxon, Kristy and Lee, Hoe and Wilson, Nathan J.},
+  year = {2020},
+  month = aug,
+  journal = {Scandinavian Journal of Occupational Therapy},
+  volume = {28},
+  number = {2},
+  pages = {91--96},
+  url = {https://doi.org/10.1080/11038128.2020.1798506},
+  urldate = {2024-01-18}
 }
 
-@article{deka_co-principal_nodate,
-	title = {Co-Principal Investigator},
-	author = {Deka, Devajyoti and Lubin, Andrea and {McGackin}, Melanie},
-	langid = {english},
-	file = {Deka et al. - Co-Principal Investigator.pdf:/home/docjyj/Zotero/storage/K7NMLWHA/Deka et al. - Co-Principal Investigator.pdf:application/pdf},
+@techreport{2020ExperiencesYoungAutistic,
+  title = {The experiences of young autistic adults in using metropolitan public transport},
+  author = {Haas, Kaaren and Wilson, Nathan J and Cordier, Reinie and Vaz, Sharmila and Lee, Hoe Chung-yeung},
+  year = {2020},
+  month = jan,
+  address = {{Brisbane}},
+  institution = {{Cooperative Research Centre for Living with Autism}},
+  url = {https://www.autismcrc.com.au/knowledge-centre/reports/experiences-young-autistic-adults-using-metropolitan-public-transport}
 }
 
-@article{amoretti_utravel_2017,
-	title = {{UTravel}: Smart Mobility with a Novel User Profiling and Recommendation Approach},
-	volume = {38},
-	issn = {1574-1192},
-	url = {https://www.sciencedirect.com/science/article/pii/S1574119216301341},
-	doi = {10.1016/j.pmcj.2016.08.008},
-	series = {Special Issue {IEEE} International Conference on Pervasive Computing and Communications ({PerCom}) 2016},
-	shorttitle = {{UTravel}},
-	abstract = {The exponentially growing availability of online information calls for personalized search and recommendation. Such systems provide recommendations typically based on user profiles built taking into account user actions. Not yet fully explored, is the domain of context-aware recommendation. In this article, we introduce a novel approach, where user profiling and context-based data filtering both concur to recommendation production. Based on the aforementioned approach, {UTravel} is a smart mobility application that recommends points of interest ({POIs}) to end users. After describing the {UTravel} architecture and implementation, we present the results of an experimental evaluation we carried out involving both simulated and real users.},
-	pages = {474--489},
-	journaltitle = {Pervasive and Mobile Computing},
-	shortjournal = {Pervasive and Mobile Computing},
-	author = {Amoretti, Michele and Belli, Laura and Zanichelli, Francesco},
-	urldate = {2024-01-18},
-	date = {2017-07-01},
-	keywords = {Context-awareness, Recommendation system, User profiling},
-	file = {Amoretti et al. - 2017 - UTravel Smart Mobility with a Novel User Profilin.pdf:/home/docjyj/Zotero/storage/WIC6F57Q/Amoretti et al. - 2017 - UTravel Smart Mobility with a Novel User Profilin.pdf:application/pdf;ScienceDirect Snapshot:/home/docjyj/Zotero/storage/U7PRGCW5/S1574119216301341.html:text/html},
+@article{2021ArtificialIntelligenceInternet,
+  title = {Artificial intelligence and internet of things in screening and management of autism spectrum disorder},
+  author = {Ghosh, Tapotosh and Banna, Md. Hasan Al and Rahman, Md. Sazzadur and Kaiser, M. Shamim and Mahmud, Mufti and Hosen, A. S. M. Sanwar and Cho, Gi Hwan},
+  year = {2021},
+  month = nov,
+  journal = {Sustainable Cities and Society},
+  volume = {74},
+  pages = {103189},
+  url = {https://doi.org/10.1016/j.scs.2021.103189},
+  urldate = {2024-01-18}
 }
 
-@inproceedings{gong_building_2017,
-	title = {Building Smart Transportation Hubs with Internet of Things to Improve Services to People with Disabilities},
-	doi = {10.1061/9780784480823.055},
-	pages = {458--466},
-	author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
-	date = {2017-06-22},
-	file = {Full Text PDF:/home/docjyj/Zotero/storage/38QPWIJS/Gong et al. - 2017 - Building Smart Transportation Hubs with Internet o.pdf:application/pdf},
+@inproceedings{2021DesigningSmartVirtual,
+  title = {Designing a {{Smart Virtual Environment}} for {{Autism Spectrum Disorder Detection}}},
+  booktitle = {2021 {{IEEE SmartWorld}}, {{Ubiquitous Intelligence}} \& {{Computing}}, {{Advanced}} \& {{Trusted Computing}}, {{Scalable Computing}} \& {{Communications}}, {{Internet}} of {{People}} and {{Smart City Innovation}} ({{SmartWorld}}/{{SCALCOM}}/{{UIC}}/{{ATC}}/{{IOP}}/{{SCI}})},
+  author = {Mekbib, Estephanos and Huang, Yan and Mei, Chao and Li, Yi Joy},
+  year = {2021},
+  month = oct,
+  pages = {288--294},
+  publisher = {{IEEE}},
+  address = {{Atlanta}},
+  url = {doi.org/10.1109/SWC50871.2021.00047},
+  urldate = {2024-01-18}
 }
 
-@inproceedings{gong_building_2017-1,
-	location = {New York, New York},
-	title = {Building Smart and Accessible Transportation Hubs with Internet of Things, Big Data Analytics, and Affective Computing},
-	isbn = {978-0-7844-8121-9},
-	url = {http://ascelibrary.org/doi/10.1061/9780784481219.012},
-	doi = {10.1061/9780784481219.012},
-	abstract = {Large transportation hubs are difficult to navigate, especially for people with special needs such as those with visual impairment, Autism spectrum disorder ({ASD}), or simply those with navigation challenges. The primary objective of this research is to design and develop a novel cyber-physical infrastructure that can effectively and efficiently transform existing transportation hubs into smart facilities capable of providing better location-aware services. We investigated the integration of a number of internet of the things ({IoT}) elements, including video analytics, Bluetooth beacons, mobile computing, and facility semantic models, to provide reliable indoor navigation services to people with special needs, yet requiring minimum infrastructure changes. Our pilot tests with people with special needs at a multi-floor building in New York City has demonstrated the effectiveness of our proposed framework.},
-	eventtitle = {International Conference on Sustainable Infrastructure 2017},
-	pages = {126--138},
-	booktitle = {International Conference on Sustainable Infrastructure 2017},
-	publisher = {American Society of Civil Engineers},
-	author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
-	urldate = {2024-01-18},
-	date = {2017-10-24},
-	langid = {english},
-	file = {Gong et al. - 2017 - Building Smart and Accessible Transportation Hubs .pdf:/home/docjyj/Zotero/storage/CCHAGKZB/Gong et al. - 2017 - Building Smart and Accessible Transportation Hubs .pdf:application/pdf},
+@article{2021EnablingTechnologiesUrban,
+  title = {Enabling {{Technologies}} for {{Urban Smart Mobility}}: {{Recent Trends}}, {{Opportunities}} and {{Challenges}}},
+  author = {Paiva, Sara and Ahad, Mohd Abdul and Tripathi, Gautami and Feroz, Noushaba and Casalino, Gabriella},
+  year = {2021},
+  month = mar,
+  journal = {Sensors},
+  volume = {21},
+  number = {6},
+  pages = {2143},
+  url = {https://doi.org/10.3390/s21062143},
+  urldate = {2024-01-18}
 }
 
-@article{haas_experiences_nodate,
-	title = {The experiences of young autistic adults in using metropolitan public transport},
-	author = {Haas, Kaaren and Wilson, Nathan J and Cordier, Reinie and Vaz, Sharmila and Lee, Hoe Chung-yeung},
-	langid = {english},
-	file = {Haas et al. - The experiences of young autistic adults in using .pdf:/home/docjyj/Zotero/storage/ZTYNY7NT/Haas et al. - The experiences of young autistic adults in using .pdf:application/pdf},
+@article{2023AccessibilityStrategiesPromote,
+  title = {Accessibility strategies to promote inclusive mobility through multi-objective approach},
+  author = {Silva, T{\^a}nia and Verde, David and Paiva, Sara and Barreto, Lu{\'i}s and Pereira, Ana I.},
+  year = {2023},
+  month = apr,
+  journal = {SN Applied Sciences},
+  volume = {5},
+  number = {5},
+  pages = {150},
+  url = {https://doi.org/10.1007/s42452-023-05349-0},
+  urldate = {2024-01-18}
 }
