--- a/content/__all__.tex
+++ b/content/__all__.tex
@@ -1,6 +1,9 @@
 \input{content/0.introduction.tex}
 \newpage
 
+\input{content/1.part.tex}
+\newpage
+
 \input{content/2.part.tex}
 \newpage
 
@@ -8,6 +11,9 @@
 \newpage
 
 \input{content/4.part.tex}
+\newpage
+
+\input{content/0.conclusion.tex}
 \newpage
 
 \input{content/0.bibliography.tex} 
