--- a/cover/cover_in.tex
+++ b/cover/cover_in.tex
@@ -12,8 +12,8 @@
     \node[anchor=north west] at (2,27.7) {\includegraphics[height=1.225cm, keepaspectratio]{cover/meta/logo_insat.pdf}};
     \node[anchor=north west] at (2,26.25) {Département de Génie Électrique \& Informatique};
     \node[anchor=north] at (21/2+1,27.7) {\includegraphics[height=1.225cm, keepaspectratio]{cover/meta/univ.png}};
-    %\node[anchor=north east] at (21-2,27.7) {\includegraphics[height=1.225cm, keepaspectratio]{cover/meta/laas.jpg}};
-    \node[anchor=north east] at (21-2,27.7) {\includegraphics[height=1.225cm, keepaspectratio]{cover/meta/laas-light.png}};
+    \node[anchor=north east] at (21-2,27.7) {\includegraphics[height=1.225cm, keepaspectratio]{cover/meta/laas.jpg}};
+    %\node[anchor=north east] at (21-2,27.7) {\includegraphics[height=1.225cm, keepaspectratio]{cover/meta/laas-light.png}};
 \end{tikzpicture}
 
 \begin{center}
