--- a/variables.tex
+++ b/variables.tex
@@ -26,3 +26,8 @@
 \def\tutors{
     \addentry{Guermouche}{Nawal}{nawal.guermouche@laas.fr}
 }
+
+% Avenced Params
+\title{\vspace{1.5cm}State of the art \\ \vspace{0.25cm} \LARGE{\textbf{\projecttitle}}}
+\author{}
+\date{\today}
