--- a/main.tex
+++ b/main.tex
@@ -14,9 +14,8 @@
 
 
 %==[DO NOT CHANGE ANYTHING HERE]====================
-\input{variables}
-\input{advanced.params/misc.commands}
-\input{advanced.params/titlevars.tex}
+\input{variables.tex}
+\input{advanced.params.tex}
 \input{cover/covermain.tex}
 
 \begin{document}
