--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -1,3 +1,29 @@
+@article{2008PsychiatricDisordersChildren,
+  title = {Psychiatric {{Disorders}} in {{Children With Autism Spectrum Disorders}}: {{Prevalence}}, {{Comorbidity}}, and {{Associated Factors}} in a {{Population-Derived Sample}}},
+  author = {Simonoff, Emily and Pickles, Andrew and Charman, Tony and Chandler, Susie and Loucas, Tom and Baird, Gillian},
+  year = {2008},
+  month = aug,
+  journal = {Journal of the American Academy of Child \& Adolescent Psychiatry},
+  volume = {47},
+  number = {8},
+  pages = {921--929},
+  url = {https://doi.org/10.1097/CHI.0b013e318179964f},
+  urldate = {2024-02-25}
+}
+
+@article{2009AnxietyChildrenAdolescents,
+  title = {Anxiety in children and adolescents with {{Autism Spectrum Disorders}}},
+  author = {MacNeil, Bonnie M. and Lopes, Vicki A. and Minnes, Patricia M.},
+  year = {2009},
+  month = jan,
+  journal = {Research in Autism Spectrum Disorders},
+  volume = {3},
+  number = {1},
+  pages = {1--21},
+  url = {https://doi.org/10.1016/j.rasd.2008.06.001},
+  urldate = {2024-02-25}
+}
+
 @techreport{2015DetourRightPlace,
   title = {Detour to the {{Right Place}}: {{A Study}} with {{Recommendations}} for {{Addressing}} the {{Transportation Needs}} and {{Barriers}} of {{Adults}} on the {{Autism Spectrum}} in {{New Jersey}}},
   author = {Deka, Devajyoti and Lubin, Andrea and McGackin, Melanie and Feeley, Cecilia},
@@ -44,6 +70,19 @@
   address = {{Seattle}},
   url = {doi.org/10.1061/9780784480823.055},
   urldate = {2024-01-18}
+}
+
+@article{2017PuttingMyBest,
+  title = {``{{Putting}} on {{My Best Normal}}'': {{Social Camouflaging}} in {{Adults}} with {{Autism Spectrum Conditions}}},
+  author = {Hull, Laura and Petrides, K. V. and Allison, Carrie and Smith, Paula and {Baron-Cohen}, Simon and Lai, Meng-Chuan and Mandy, William},
+  year = {2017},
+  month = aug,
+  journal = {Journal of Autism and Developmental Disorders},
+  volume = {47},
+  number = {8},
+  pages = {2519--2534},
+  url = {https://doi.org/10.1007/s10803-017-3166-5},
+  urldate = {2024-02-25}
 }
 
 @article{2017UTravelSmartMobility,
@@ -118,6 +157,19 @@
   pages = {103189},
   url = {https://doi.org/10.1016/j.scs.2021.103189},
   urldate = {2024-01-18}
+}
+
+@article{2021AutismMedicalComorbidities,
+  title = {Autism medical comorbidities},
+  author = {{Al-Beltagi}, Mohammed},
+  year = {2021},
+  month = may,
+  journal = {World Journal of Clinical Pediatrics},
+  volume = {10},
+  number = {3},
+  pages = {15--28},
+  url = {https://doi.org/10.5409/wjcp.v10.i3.15},
+  urldate = {2024-02-25}
 }
 
 @inproceedings{2021DesigningSmartVirtual,
