--- a/content/1.part.tex
+++ b/content/1.part.tex
@@ -1,4 +1,4 @@
-\section{Autism Spectrum Disorder}
+\section{Autism, a complex condition}
 
 As defined by the DSM-5, autism spectrum disorder is a complex neurodevelopmental condition that manifests itself in a wide range of challenges related to social interaction, communication, repetitive behaviors, and often, restrictive interests.
 
