--- a/content/1.part.tex
+++ b/content/1.part.tex
@@ -1,8 +1,8 @@
-\section{Autism, a complex condition}
+\section{Autism Spectrum Disorder}
 
 As defined by the DSM-5, autism spectrum disorder is a complex neurodevelopmental condition that manifests itself in a wide range of challenges related to social interaction, communication, repetitive behaviors, and often, restrictive interests.
 
-The World Health Organisation estimates that approximately 1 in 100 children worldwide has ASD. However, this figure may not capture the full extent of ASD prevalence due to underdiagnosis, which we will further explain in the report. It's important to note that an observed increase in ASD prevalence over time may be attributed, at least in part, to factors such as improved awareness, expanded diagnostic criteria, and increased access to services rather than a true rise in the prevalence of the condition.
+The World Health Organization estimates that approximately 1 in 100 children worldwide has ASD. However, this figure may not capture the full extent of ASD prevalence due to underdiagnoses, which we will further explain in the report. It's important to note that an observed increase in ASD prevalence over time may be attributed, at least in part, to factors such as improved awareness, expanded diagnostic criteria, and increased access to services rather than a true rise in the prevalence of the condition.
 
 Concerning the official diagnosis, there are several recurring themes. First and foremost, autistic individuals often struggle with social interactions. They may find it difficult to initiate or sustain conversations, understand non-verbal cues like facial expressions and body language, and may have trouble forming and maintaining relationships. This comes hand in hand with communication challenges, which can vary widely. Some individuals may have delayed speech development or may never develop spoken language. Others may have a rich vocabulary but struggle with pragmatic aspects of communication, such as understanding sarcasm or maintaining appropriate eye contact.
 
@@ -19,7 +19,7 @@ Over time, the diagnostic criteria for Autism Spectrum Disorder have evolved. Th
 Autism is not classified as a mental health disorder, yet a significant proportion of individuals on the autism spectrum grapple with mental health challenges. Elevated rates of anxiety and depression among individuals with autism have been linked to various adverse outcomes, including diminished life satisfaction, heightened social challenges, feelings of loneliness, and difficulties with sleep, such as insomnia. These struggles can have profound and devastating consequences. Studies indicate that individuals on the autism spectrum are considerably more prone to contemplating, attempting, and tragically, dying by suicide compared to the general population.
 
 ASD often co-occurs with other developmental and psychiatric conditions.
-Specifically, 84.1\% of the ASD children met DSM-III-R criteria for at least one anxiety disorder, 25\% met criteria for Obssesive compulsive disorder\cite{2009AnxietyChildrenAdolescents}, 29.2\% suffer from social anxiety disorder, 28\% have ADHD diagnosis\cite{2008PsychiatricDisordersChildren} Furthermore, "some genetic disorders are more common in children with ASD such as Fragile X syndrome, Down syndrome, Duchenne muscular dystrophy, neurofibromatosis type I, and tuberous sclerosis complex. Children with autism are also more prone to a variety of neurological disorders, including epilepsy, macrocephaly, hydrocephalus, cerebral palsy, migraine/headaches, and congenital abnormalities of the nervous system."\cite{2021AutismMedicalComorbidities}
+Specifically, 84.1\% of the ASD children met DSM-III-R criteria for at least one anxiety disorder, 25\% met criteria for Obsessive compulsive disorder\cite{2009AnxietyChildrenAdolescents}, 29.2\% suffer from social anxiety disorder, 28\% have ADHD diagnosis\cite{2008PsychiatricDisordersChildren} Furthermore, "some genetic disorders are more common in children with ASD such as Fragile X syndrome, Down syndrome, Duchenne muscular dystrophy, neurofibromatosis type I, and tuberous sclerosis complex. Children with autism are also more prone to a variety of neurological disorders, including epilepsy, macrocephaly, hydrocephalus, cerebral palsy, migraine/headaches, and congenital abnormalities of the nervous system."\cite{2021AutismMedicalComorbidities}
 
 \subsection{Recognizing Biases and Addressing Disparities in Healthcare}
 
