--- a/content/0.introduction.tex
+++ b/content/0.introduction.tex
@@ -1,6 +1,6 @@
 \sectionnn{Introduction}
 
-Nowadays, with the increasing growth of populations, mobility has become a constant axis of development. Cities put more and more effort in expanding their public transportation networks in order to serve the consistent flow of users and avoid traffic jams. Additionally, mobility must adapt to the challenges of the 21\up{st} century, like ecology, hence the development of alternate ways to get about.
+Nowadays, with the increasing growth of populations, mobility has become a constant axis of development. Cities put more and more effort in expanding their public transportation networks in order to serve the consistent flow of users and avoid traffic jams. Additionally, mobility must adapt to the challenges of the 21st century, like ecology, hence the development of alternate ways to get about.
 
 However, mobility still fails to address the issue of inclusivity. An increasing population means an increasing number of people with disabilities or disorders, and some infrastructures are still not adapted to the special needs they may have. Modern constructions have started to evolve, specifically to be more accessible for deaf people, blind people, or wheelchair users.
 
