--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,9 +1,8 @@
 @article{2008PsychiatricDisordersChildren,
   title = {Psychiatric {{Disorders}} in {{Children With Autism Spectrum Disorders}}: {{Prevalence}}, {{Comorbidity}}, and {{Associated Factors}} in a {{Population-Derived Sample}}},
   author = {Simonoff, Emily and Pickles, Andrew and Charman, Tony and Chandler, Susie and Loucas, Tom and Baird, Gillian},
-  year = {2008},
-  month = aug,
-  journal = {Journal of the American Academy of Child \& Adolescent Psychiatry},
+  date = {2008-08},
+  journaltitle = {Journal of the American Academy of Child \& Adolescent Psychiatry},
   volume = {47},
   number = {8},
   pages = {921--929},
@@ -14,9 +13,8 @@
 @article{2009AnxietyChildrenAdolescents,
   title = {Anxiety in children and adolescents with {{Autism Spectrum Disorders}}},
   author = {MacNeil, Bonnie M. and Lopes, Vicki A. and Minnes, Patricia M.},
-  year = {2009},
-  month = jan,
-  journal = {Research in Autism Spectrum Disorders},
+  date = {2009-01},
+  journaltitle = {Research in Autism Spectrum Disorders},
   volume = {3},
   number = {1},
   pages = {1--21},
@@ -24,22 +22,20 @@
   urldate = {2024-02-25}
 }
 
-@techreport{2015DetourRightPlace,
+@report{2015DetourRightPlace,
   title = {Detour to the {{Right Place}}: {{A Study}} with {{Recommendations}} for {{Addressing}} the {{Transportation Needs}} and {{Barriers}} of {{Adults}} on the {{Autism Spectrum}} in {{New Jersey}}},
   author = {Deka, Devajyoti and Lubin, Andrea and McGackin, Melanie and Feeley, Cecilia},
-  year = {2015},
-  month = sep,
-  address = {{New Jersey}},
+  date = {2015-09},
   institution = {{Rutgers}},
+  location = {{New Jersey}},
   url = {https://vtc.rutgers.edu/publication/detour-to-the-right-place/}
 }
 
 @article{2015ViewpointsAdultsAutism,
   title = {Viewpoints of adults with and without {{Autism Spectrum Disorders}} on public transport},
-  author = {Falkmer, Marita and Barnett, Tania and Horlin, Chiara and Falkmer, Olov and Siljehav, Jessica and Fristedt, Sofi and Lee, Hoe C. and Chee, Derserri Y. and Wretstrand, Anders and Falkmer, Torbj{\"o}rn},
-  year = {2015},
-  month = oct,
-  journal = {Transportation Research Part A: Policy and Practice},
+  author = {Falkmer, Marita and Barnett, Tania and Horlin, Chiara and Falkmer, Olov and Siljehav, Jessica and Fristedt, Sofi and Lee, Hoe C. and Chee, Derserri Y. and Wretstrand, Anders and Falkmer, Torbjörn},
+  date = {2015-10},
+  journaltitle = {Transportation Research Part A: Policy and Practice},
   volume = {80},
   pages = {163--183},
   url = {https://doi.org/10.1016/j.tra.2015.07.019},
@@ -50,12 +46,11 @@
   title = {Building {{Smart}} and {{Accessible Transportation Hubs}} with {{Internet}} of {{Things}}, {{Big Data Analytics}}, and {{Affective Computing}}},
   booktitle = {International {{Conference}} on {{Sustainable Infrastructure}} 2017},
   author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
-  year = {2017},
-  month = oct,
+  date = {2017-10},
   pages = {126--138},
   publisher = {{American Society of Civil Engineers}},
-  address = {{New York}},
-  url = {doi.org/10.1061/9780784481219.012},
+  location = {{New York}},
+  url = {https://doi.org/10.1061/9780784481219.012},
   urldate = {2024-02-24}
 }
 
@@ -63,21 +58,19 @@
   title = {Building {{Smart Transportation Hubs}} with {{Internet}} of {{Things}} to {{Improve Services}} to {{People}} with {{Disabilities}}},
   booktitle = {Computing in {{Civil Engineering}} 2017},
   author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
-  year = {2017},
-  month = jun,
+  date = {2017-06},
   pages = {458--466},
   publisher = {{American Society of Civil Engineers}},
-  address = {{Seattle}},
-  url = {doi.org/10.1061/9780784480823.055},
+  location = {{Seattle}},
+  url = {https://doi.org/10.1061/9780784480823.055},
   urldate = {2024-01-18}
 }
 
 @article{2017PuttingMyBest,
-  title = {``{{Putting}} on {{My Best Normal}}'': {{Social Camouflaging}} in {{Adults}} with {{Autism Spectrum Conditions}}},
-  author = {Hull, Laura and Petrides, K. V. and Allison, Carrie and Smith, Paula and {Baron-Cohen}, Simon and Lai, Meng-Chuan and Mandy, William},
-  year = {2017},
-  month = aug,
-  journal = {Journal of Autism and Developmental Disorders},
+  title = {“{{Putting}} on {{My Best Normal}}”: {{Social Camouflaging}} in {{Adults}} with {{Autism Spectrum Conditions}}},
+  author = {Hull, Laura and Petrides, K. V. and Allison, Carrie and Smith, Paula and Baron-Cohen, Simon and Lai, Meng-Chuan and Mandy, William},
+  date = {2017-08},
+  journaltitle = {Journal of Autism and Developmental Disorders},
   volume = {47},
   number = {8},
   pages = {2519--2534},
@@ -88,22 +81,20 @@
 @article{2017UTravelSmartMobility,
   title = {{{UTravel}}: {{Smart Mobility}} with a {{Novel User Profiling}} and {{Recommendation Approach}}},
   author = {Amoretti, Michele and Belli, Laura and Zanichelli, Francesco},
-  year = {2017},
-  month = jul,
-  journal = {Pervasive and Mobile Computing},
+  date = {2017-07},
+  journaltitle = {Pervasive and Mobile Computing},
   volume = {38},
   number = {2},
   pages = {474--489},
-  url = {doi.org/10.1016/j.pmcj.2016.08.008},
+  url = {https://doi.org/10.1016/j.pmcj.2016.08.008},
   urldate = {2024-01-18}
 }
 
 @article{2018MobilityPoliciesExtraSmall,
   title = {Mobility {{Policies}} and {{Extra-Small Projects}} for {{Improving Mobility}} of {{People}} with {{Autism Spectrum Disorder}}},
   author = {Cecchini, Arnaldo and Congiu, Tanja and Talu, Valentina and Tola, Giulia},
-  year = {2018},
-  month = sep,
-  journal = {Sustainability},
+  date = {2018-09},
+  journaltitle = {Sustainability},
   volume = {10},
   number = {9},
   pages = {3256},
@@ -114,22 +105,20 @@
 @article{2018WearableAssistiveTechnologies,
   title = {Wearable {{Assistive Technologies}} for {{Autism}}: {{Opportunities}} and {{Challenges}}},
   author = {Benssassi, Esma Mansouri and Gomez, Juan-Carlos and Boyd, LouAnne E. and Hayes, Gillian R. and Ye, Juan},
-  year = {2018},
-  month = jun,
-  journal = {IEEE Pervasive Computing},
+  date = {2018-06},
+  journaltitle = {IEEE Pervasive Computing},
   volume = {17},
   number = {2},
   pages = {11--21},
-  url = {doi.org/10.1109/MPRV.2018.022511239},
+  url = {https://doi.org/10.1109/MPRV.2018.022511239},
   urldate = {2024-01-18}
 }
 
 @article{2020DevelopingCommunityMobility,
   title = {Developing community mobility and driving with youth on the autism spectrum: {{A}} psychosocial perspective},
   author = {Kersten, Michelle L. and Coxon, Kristy and Lee, Hoe and Wilson, Nathan J.},
-  year = {2020},
-  month = aug,
-  journal = {Scandinavian Journal of Occupational Therapy},
+  date = {2020-08},
+  journaltitle = {Scandinavian Journal of Occupational Therapy},
   volume = {28},
   number = {2},
   pages = {91--96},
@@ -137,22 +126,20 @@
   urldate = {2024-01-18}
 }
 
-@techreport{2020ExperiencesYoungAutistic,
+@report{2020ExperiencesYoungAutistic,
   title = {The experiences of young autistic adults in using metropolitan public transport},
   author = {Haas, Kaaren and Wilson, Nathan J and Cordier, Reinie and Vaz, Sharmila and Lee, Hoe Chung-yeung},
-  year = {2020},
-  month = jan,
-  address = {{Brisbane}},
+  date = {2020-01},
   institution = {{Cooperative Research Centre for Living with Autism}},
+  location = {{Brisbane}},
   url = {https://www.autismcrc.com.au/knowledge-centre/reports/experiences-young-autistic-adults-using-metropolitan-public-transport}
 }
 
 @article{2021ArtificialIntelligenceInternet,
   title = {Artificial intelligence and internet of things in screening and management of autism spectrum disorder},
   author = {Ghosh, Tapotosh and Banna, Md. Hasan Al and Rahman, Md. Sazzadur and Kaiser, M. Shamim and Mahmud, Mufti and Hosen, A. S. M. Sanwar and Cho, Gi Hwan},
-  year = {2021},
-  month = nov,
-  journal = {Sustainable Cities and Society},
+  date = {2021-11},
+  journaltitle = {Sustainable Cities and Society},
   volume = {74},
   pages = {103189},
   url = {https://doi.org/10.1016/j.scs.2021.103189},
@@ -161,10 +148,9 @@
 
 @article{2021AutismMedicalComorbidities,
   title = {Autism medical comorbidities},
-  author = {{Al-Beltagi}, Mohammed},
-  year = {2021},
-  month = may,
-  journal = {World Journal of Clinical Pediatrics},
+  author = {Al-Beltagi, Mohammed},
+  date = {2021-05},
+  journaltitle = {World Journal of Clinical Pediatrics},
   volume = {10},
   number = {3},
   pages = {15--28},
@@ -176,21 +162,19 @@
   title = {Designing a {{Smart Virtual Environment}} for {{Autism Spectrum Disorder Detection}}},
   booktitle = {2021 {{IEEE SmartWorld}}, {{Ubiquitous Intelligence}} \& {{Computing}}, {{Advanced}} \& {{Trusted Computing}}, {{Scalable Computing}} \& {{Communications}}, {{Internet}} of {{People}} and {{Smart City Innovation}} ({{SmartWorld}}/{{SCALCOM}}/{{UIC}}/{{ATC}}/{{IOP}}/{{SCI}})},
   author = {Mekbib, Estephanos and Huang, Yan and Mei, Chao and Li, Yi Joy},
-  year = {2021},
-  month = oct,
+  date = {2021-10},
   pages = {288--294},
   publisher = {{IEEE}},
-  address = {{Atlanta}},
-  url = {doi.org/10.1109/SWC50871.2021.00047},
+  location = {{Atlanta}},
+  url = {https://doi.org/10.1109/SWC50871.2021.00047},
   urldate = {2024-01-18}
 }
 
 @article{2021EnablingTechnologiesUrban,
   title = {Enabling {{Technologies}} for {{Urban Smart Mobility}}: {{Recent Trends}}, {{Opportunities}} and {{Challenges}}},
   author = {Paiva, Sara and Ahad, Mohd Abdul and Tripathi, Gautami and Feroz, Noushaba and Casalino, Gabriella},
-  year = {2021},
-  month = mar,
-  journal = {Sensors},
+  date = {2021-03},
+  journaltitle = {Sensors},
   volume = {21},
   number = {6},
   pages = {2143},
@@ -200,10 +184,9 @@
 
 @article{2023AccessibilityStrategiesPromote,
   title = {Accessibility strategies to promote inclusive mobility through multi-objective approach},
-  author = {Silva, T{\^a}nia and Verde, David and Paiva, Sara and Barreto, Lu{\'i}s and Pereira, Ana I.},
-  year = {2023},
-  month = apr,
-  journal = {SN Applied Sciences},
+  author = {Silva, Tânia and Verde, David and Paiva, Sara and Barreto, Luís and Pereira, Ana I.},
+  date = {2023-04},
+  journaltitle = {SN Applied Sciences},
   volume = {5},
   number = {5},
   pages = {150},
