--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \input{variables}
 \input{advanced.params}
 \input{cover/covermain}
-\addbibresource{content/bibliography.bib}
+\addbibresource{bibliography.bib}
 
 \begin{document}
     \input{content/__all__}
