--- a/content/0.bibliography.tex
+++ b/content/0.bibliography.tex
@@ -1,5 +1,3 @@
-%===================================================================
-
 \newpage
 \pagestyle{fancy}
 \lhead{}
@@ -9,6 +7,4 @@
 \cfoot{}
 \rfoot{}
 
-\bibliographystyle{IEEEtran}
-
-\bibliography{content/bibliography}
+\printbibliography[heading=bibintoc]
